kubernetes/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngix
  labels:
    app: ngix
spec:
  replicas: 1
  template:
    metadata:
      name: ngix
      labels:
        app: ngix
    spec:
      containers:
        - name: ngix
          image: library/nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: ngix
