kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngix
  labels:
    name: ingress-nginx-controller
    namespace: ingress-nginx
spec:
  selector:
    app: ngix
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 80
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: httpd
  labels:
    name: ingress-nginx-controller
    namespace: ingress-nginx
spec:
  selector:
    app: httpd
  ports:
    - name: http
      port: 8001
      protocol: TCP
      targetPort: 80
  type: ClusterIP
